services/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course
spec:
  ingressClassName: nginx
  rules:
  - host: demo.91.92.117.101.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /public 
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
